# objects-in-video-detector

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  results.example.csv
app/: main.py
app/config/: secrets.py
app/core/: vision.py
app/utils/: logger.py
tests/: test_main.py
