[project]
name = "objects-in-video-detector"
version = "0.1.0"
description = "A microservice that detects objects in a video"
authors = [
    { name = "Ruslan Orazliev", email = "ruslan.ora@outlook.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
httpx = "^0.28.1"
moviepy = "^2.1.2"
python-dotenv = "^1.1.0"
python-multipart = "^0.0.20"
torch = "^2.7.0"
torchvision = "^0.22.0"
uvicorn = "^0.34.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
pytest = "^8.3.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
